; ModuleID = '/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_writeint.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_writeint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wptr = common dso_local global i64 0, align 8
@buff = common dso_local global i64 0, align 8
@BUFFSIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @writeint(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @wptr, align 8
  %4 = add i64 %3, 4
  %5 = load i64, i64* @buff, align 8
  %6 = load i64, i64* @BUFFSIZE, align 8
  %7 = add nsw i64 %5, %6
  %8 = icmp ugt i64 %4, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call i32 (...) @flushout()
  br label %11

11:                                               ; preds = %9, %1
  %12 = load i32, i32* %2, align 4
  %13 = load i64, i64* @wptr, align 8
  %14 = inttoptr i64 %13 to i32*
  store i32 %12, i32* %14, align 4
  %15 = load i64, i64* @wptr, align 8
  %16 = add i64 %15, 4
  store i64 %16, i64* @wptr, align 8
  ret void
}

declare dso_local i32 @flushout(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
